# research-project-synchronization

./: .gitignore  README.md  WORKSPACE.bazel  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: BUILD.bazel  build.gradle  build.gradle.kts
app/src/androidTest/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
mylibrary001/: BUILD.bazel  (+2 more)
mylibrary030/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary030/src/androidTest/kotlin/ru.rma.apps.mylibrary030/: ExampleInstrumentedTest.kt
mylibrary030/src/main/: AndroidManifest.xml
mylibrary030/src/main/kotlin/ru.rma.apps.mylibrary030/: Name.kt
mylibrary030/src/test/kotlin/ru.rma.apps.mylibrary030/: ExampleUnitTest.kt
mylibrary046/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary046/src/androidTest/kotlin/ru.rma.apps.mylibrary046/: ExampleInstrumentedTest.kt
mylibrary046/src/main/: AndroidManifest.xml
mylibrary046/src/main/kotlin/ru.rma.apps.research.project.synchronization.mylibrary046/: Name.kt
mylibrary046/src/test/kotlin/ru.rma.apps.mylibrary046/: ExampleUnitTest.kt
mylibrary086/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary086/src/androidTest/kotlin/ru.rma.apps.mylibrary086/: ExampleInstrumentedTest.kt
mylibrary086/src/main/: AndroidManifest.xml
mylibrary086/src/main/kotlin/ru.rma.apps.mylibrary086/: Name.kt
mylibrary086/src/test/kotlin/ru.rma.apps.mylibrary086/: ExampleUnitTest.kt
mylibrary092/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary092/src/androidTest/kotlin/ru.rma.apps.mylibrary092/: ExampleInstrumentedTest.kt
mylibrary092/src/main/: AndroidManifest.xml
mylibrary092/src/main/kotlin/ru.rma.apps.mylibrary092/: Name.kt
mylibrary092/src/test/kotlin/ru.rma.apps.mylibrary092/: ExampleUnitTest.kt
mylibrary094/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary094/src/androidTest/kotlin/ru.rma.apps.mylibrary094/: ExampleInstrumentedTest.kt
mylibrary094/src/main/: AndroidManifest.xml
mylibrary094/src/main/kotlin/ru.rma.apps.mylibrary094/: Name.kt
mylibrary094/src/test/kotlin/ru.rma.apps.mylibrary094/: ExampleUnitTest.kt
mylibrary116/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary116/src/androidTest/kotlin/ru.rma.apps.mylibrary116/: ExampleInstrumentedTest.kt
mylibrary116/src/main/: AndroidManifest.xml
mylibrary116/src/main/kotlin/ru.rma.apps.mylibrary116/: Name.kt
mylibrary116/src/test/kotlin/ru.rma.apps.mylibrary116/: ExampleUnitTest.kt
mylibrary135/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary135/src/androidTest/kotlin/ru.rma.apps.mylibrary135/: ExampleInstrumentedTest.kt
mylibrary135/src/main/: AndroidManifest.xml
mylibrary135/src/main/kotlin/ru.rma.apps.mylibrary135/: Name.kt
mylibrary135/src/test/kotlin/ru.rma.apps.mylibrary135/: ExampleUnitTest.kt
mylibrary156/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary156/src/androidTest/kotlin/ru.rma.apps.mylibrary156/: ExampleInstrumentedTest.kt
mylibrary156/src/main/: AndroidManifest.xml
mylibrary156/src/main/kotlin/ru.rma.apps.research.project.synchronization.mylibrary156/: Name.kt
mylibrary156/src/test/kotlin/ru.rma.apps.mylibrary156/: ExampleUnitTest.kt
mylibrary180/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary180/src/androidTest/kotlin/ru.rma.apps.mylibrary180/: ExampleInstrumentedTest.kt
mylibrary180/src/main/: AndroidManifest.xml
mylibrary180/src/main/kotlin/ru.rma.apps.mylibrary180/: Name.kt
mylibrary180/src/test/kotlin/ru.rma.apps.mylibrary180/: ExampleUnitTest.kt
mylibrary206/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary206/src/androidTest/kotlin/ru.rma.apps.mylibrary206/: ExampleInstrumentedTest.kt
mylibrary206/src/main/: AndroidManifest.xml
mylibrary206/src/main/kotlin/ru.rma.apps.research.project.synchronization.mylibrary206/: Name.kt
mylibrary206/src/test/kotlin/ru.rma.apps.mylibrary206/: ExampleUnitTest.kt
mylibrary208/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary208/src/androidTest/kotlin/ru.rma.apps.mylibrary208/: ExampleInstrumentedTest.kt
mylibrary208/src/main/: AndroidManifest.xml
mylibrary208/src/main/kotlin/ru.rma.apps.mylibrary208/: Name.kt
mylibrary216/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary216/src/main/: AndroidManifest.xml
mylibrary234/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary234/src/main/: AndroidManifest.xml
mylibrary244/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary244/src/main/: AndroidManifest.xml
mylibrary245/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary245/src/main/: AndroidManifest.xml
mylibrary300/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary300/src/main/: AndroidManifest.xml
mylibrary305/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary305/src/main/: AndroidManifest.xml
mylibrary309/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary309/src/main/: AndroidManifest.xml
mylibrary343/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary343/src/main/: AndroidManifest.xml
mylibrary349/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary349/src/main/: AndroidManifest.xml
mylibrary352/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary352/src/main/: AndroidManifest.xml
mylibrary365/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary365/src/main/: AndroidManifest.xml
mylibrary372/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary372/src/main/: AndroidManifest.xml
mylibrary412/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary412/src/main/: AndroidManifest.xml
mylibrary414/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary414/src/main/: AndroidManifest.xml
mylibrary450/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary450/src/main/: AndroidManifest.xml
mylibrary454/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary454/src/main/: AndroidManifest.xml
mylibrary463/: BUILD.bazel  build.gradle  build.gradle.kts
mylibrary463/src/main/: AndroidManifest.xml
(+6865 files in other folders)
