load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "mylibrary305",
    srcs = glob(["src/main/kotlin/**"]),
    custom_package = "ru.rma.apps.research.project.synchronization.mylibrary305",
    manifest = "src/main/AndroidManifest.xml",
    visibility = ["//visibility:public"],
    deps = [
        "//mylibrary306:mylibrary306",
        artifact("androidx.appcompat:appcompat"),
        artifact("androidx.constraintlayout:constraintlayout"),
        artifact("androidx.core:core-ktx"),
        artifact("androidx.lifecycle:lifecycle-common"),
        artifact("androidx.lifecycle:lifecycle-viewmodel"),
        artifact("com.google.android.material:material"),
    ],
)
