load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "mylibrary372",
    srcs = glob(["src/main/kotlin/**"]),
    custom_package = "ru.rma.apps.research.project.synchronization.mylibrary372",
    manifest = "src/main/AndroidManifest.xml",
    visibility = ["//visibility:public"],
    deps = [
        "//mylibrary373:mylibrary373",
        artifact("androidx.appcompat:appcompat"),
        artifact("androidx.constraintlayout:constraintlayout"),
        artifact("androidx.core:core-ktx"),
        artifact("androidx.lifecycle:lifecycle-common"),
        artifact("androidx.lifecycle:lifecycle-viewmodel"),
        artifact("com.google.android.material:material"),
    ],
)
